Replace Collections.emptyMap() with Map.of()